--- a/main.html
+++ b/main.html
@@ -115,19 +115,19 @@
 
         <ul class="Destinations">
             <li>
-                <img src="WanderWave_images/Maldives.png">
+                <img src="main images/Maldives.png">
             </li>
             <li>
-                <img src="WanderWave_images/Dubai.png">
+                <img src="main images/Dubai.png">
             </li>
             <li>
-                <img src="WanderWave_images/Thailand.png">
+                <img src="main images/Thailand.png">
             </li>
             <li>
-                <img src="WanderWave_images/Sri Lanka.png">
+                <img src="main images/Sri Lanka.png">
             </li>
             <li>
-                <img src="WanderWave_images/Europe.png">
+                <img src="main images/Europe.png">
             </li>
         </ul>
 
@@ -152,13 +152,13 @@
 
         <ul class="Destinations">
             <li>
-                <img src="WanderWave_images/Maldives-2.png">
+                <img src="main images/Maldives-2.png">
             </li>
             <li>
-                <img src="WanderWave_images/Dubai-2.png">
+                <img src="main images/Dubai-2.png">
             </li>
             <li>
-                <img src="WanderWave_images/Thailand-2.png">
+                <img src="main images/Thailand-2.png">
             </li>
         </ul>
 </body>
