--- a/signup.html
+++ b/signup.html
@@ -44,6 +44,39 @@
             </form>
         </div>
     </div>
+
+    <div class="right">
+        <h3>UNLOCK THESE BENEFITS</h3>
+        <div class="middle">
+            <div class="box">
+                <i class="fa-solid fa-coins"></i>
+                <div class="fuck">
+                    <h4>Sign-up & Earn</h4>
+                    <p>Sign-up & get exciting Deals</p>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-gifts"></i>
+                <div class="fuck">
+                    <h4>Amazing Discounts</h4>
+                    <p>Login And Enjoy Amazing Discounts On Travel Bookings.</p>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-plane-departure"></i>
+                <div class="fuck">
+                    <h4>Hassle-Free Bookings</h4>
+                    <p>Sign-In And Enjoy Hassle-Free Bookings.</p>
+                </div>
+            </div>
+            <div class="coupon">
+                <h4>FLAT 12% OFF*</h4>
+                <p>on your First Flight Booking</p>
+                <p style="color: #0023A1;">Use coupon : WANDERER</p>
+            </div>
+        </div>
+    </div>
+    
 </body>
 
 </html>
