--- a/header.html
+++ b/header.html
@@ -12,189 +12,220 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/> 
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            border: 0;
-            font-family: 'montserrat';
-        }
+<style>
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'montserrat';
+}
 
-        /* HEADER */
+body{
+    background-color: #E5E5E5;
+}
+/* HEADER */
 
-        header {
-            background-image: url(WanderWave_images/bg-img-flights.jpeg);
-            background-size: cover;
-            background-position: center center;
-            height: 85vh;
-            position: relative;
-        }
+header {
+    background-image: url(WanderWave_images/bg-img-flights.jpeg);
+    background-size: cover;
+    background-position: center center;
+    height: 85vh;
+    position: relative;
+}
 
-        .gradient {
-            background: rgb(255, 255, 255);
-            background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 50%);
-            position: absolute;
-            height: 85vh;
-            width: 100vw;
-        }
+.gradient {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 50%);
+    position: absolute;
+    height: 85vh;
+    width: 100%;
+}
 
-        nav {
-            height: 10vh;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            max-width: 85.5vw;
-            margin: auto;
-            position: relative;
-        }
+nav {
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 85.5vw;
+    margin: auto;
+    position: relative;
+}
 
-        nav img {
-            width: 18vmax;
-        }
+nav img {
+    width: 18vmax;
+}
 
-        .login-button {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 16px;
-            gap: 10px;
-            text-decoration: none;
-            background-color: #0023A1;
-            border-radius: 7px;
-            color: white;
-            padding: 17px;
-        }
+.login-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    gap: 10px;
+    text-decoration: none;
+    background-color: #0023A1;
+    border-radius: 7px;
+    color: white;
+    padding: 17px;
+}
 
-        .login-button i {
-            font-size: 22px;
-        }
+.login-button i {
+    font-size: 22px;
+}
 
-        .content {
-            position: relative;
-            margin-top: 8vh;
-            margin-left: 7.5vw;
-        }
+.content {
+    position: relative;
+    margin-top: 8vh;
+    margin-left: 7.5vw;
+}
 
-        .content h1 {
-            font-size: 3.7vmax;
-            padding-bottom: 30px;
-        }
+.content h1 {
+    font-size: 3.7vmax;
+    padding-bottom: 30px;
+}
 
-        .content p {
-            font-size: 1.4vmax;
-            font-weight: 450;
-        }
+.content .scroll-container {
+    height: 4vw;
+    width: 30%;
+    overflow: hidden;
 
-        .content p i {
-            color: #F86800;
-        }
+}
 
-        .navbar-2 {
-            background-color: #0023A1;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            width: 60vw;
-            height: 8vh;
-            margin: auto;
-            margin-top: 8vh;
-            position: relative;
-            font-size: 1.2vmax;
-            border-top-right-radius: 10px;
-            border-top-left-radius: 10px;
-            letter-spacing: 0.08vmax;
-        }
+.content .scroll-text {
+    height: 100px;
+    width: 100px;
+    text-align: center;
+    transform: translateY(-100%);
+    animation: scrolling 5s linear infinite;
+}
 
-        .navbar-2 a {
-            text-decoration: none;
-            color: white;
-        }
+@keyframes scrolling {
+    from {
+        transform: translateY(-230%);
+    }
 
-        .navbar-2 a:after {
-            background: none repeat scroll 0 0 transparent;
-            bottom: -8px;
-            content: "";
-            height: 5px;
-            left: 50%;
-            position: absolute;
-            background: white;
-            transition: width 0.3s ease 0s, left 0.3s ease 0s;
-            width: 0;
-        }
+    to {
+        transform: translateY(60%);
+    }
+}
 
-        .navbar-2 a:hover:after {
-            width: 100%;
-            left: 0;
-        }
+.content p {
+    font-size: 1.4vmax;
+    font-weight: 450;
+    cursor: pointer;
+}
 
-        .navbar-2 i {
-            font-size: 1.8vmax;
-        }
+.content p i {
+    color: #F86800;
+}
 
-        .navbar-2 li {
-            display: table-cell;
-            position: relative;
-            padding: 0.8vmax 0;
-        }
+.navbar-2 {
+    background-color: #0023A1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 60vw;
+    height: 8vh;
+    margin: auto;
+    margin-top: 8vh;
+    position: relative;
+    font-size: 1.2vmax;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    letter-spacing: 0.08vmax;
+}
 
-        .navbar-2 .icons {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 8px;
-        }
+.navbar-2 a {
+    text-decoration: none;
+    color: white;
+}
 
-        .navbar-2 hr {
-            color: white;
-            border-right: 1px white solid;
-            padding-top: 50px;
-        }
+.navbar-2 a:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: -8px;
+    content: "";
+    height: 5px;
+    left: 50%;
+    position: absolute;
+    background: white;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+}
 
-        .navbar-3 {
-            background-color: #ffffff;
-            height: 18vh;
-            width: 80vw;
-            margin: auto;
-            position: relative;
-            border-radius: 10px;
-            box-shadow: 5px 5px 5px black;
-            list-style: none;
-            font-size: 1.35vmax;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+.navbar-2 a:hover:after {
+    width: 100%;
+    left: 0;
+}
 
-        .navbar-3 .left-1 {
-            width: 82%;
-            height: 100%;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-        }
+.navbar-2 i {
+    font-size: 1.8vmax;
+}
 
-        .left-1 .inner-text {
-            width: 20%;
-            font-weight: 500;
-        }
+.navbar-2 li {
+    display: table-cell;
+    position: relative;
+    padding: 0.8vmax 0;
+}
 
-        .left-1 .inner-text input {
-            height: 4vh;
-            width: 90%;
-            border: none;
-            margin-top: 2.5vh;
-            font-size: 1.15vmax;
-        }
+.navbar-2 .icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
 
-        .navbar-3 i {
-            font-size: 1.5vmax;
-            padding: 1.8vmax;
-            background-color: #F86800;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-    </style>
+.navbar-2 hr {
+    color: white;
+    border-right: 1px white solid;
+    padding-top: 50px;
+}
+
+.navbar-3 {
+    background-color: #ffffff;
+    height: 18vh;
+    width: 80vw;
+    margin: auto;
+    position: relative;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px black;
+    list-style: none;
+    font-size: 1.35vmax;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar-3 .left-1 {
+    width: 82%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.left-1 .inner-text {
+    width: 20%;
+    font-weight: 500;
+}
+
+.left-1 .inner-text input {
+    height: 4vh;
+    width: 90%;
+    border: none;
+    margin-top: 2.5vh;
+    font-size: 1.15vmax;
+    color: #acacac;
+}
+
+.navbar-3 i {
+    font-size: 1.5vmax;
+    padding: 1.8vmax;
+    background-color: #F86800;
+    border-radius: 50%;
+    cursor: pointer;
+}
+</style>
 
 </head>
 
@@ -202,14 +233,22 @@
     <header class="bg-img">
         <div class="gradient"></div>
         <nav>
-            <img src="/WanderWave/WanderWave_images/logo.png">
-            <a href="#" class="login-button">
+            <img src="WanderWave_images/logo.png">
+            <a href="signup.html" class="login-button">
                 <i class="fa-regular fa-user"></i>
                 <p>Login / Sign Up</p>
             </a>
         </nav>
         <div class="content">
-            <pre><h1>Customize & Book<br>Amazing Holiday<br>Packages</h1></pre>
+            <h1>Customize & Book<br>Amazing Holiday<br>
+                <div class="scroll-container">
+                    <div class="scroll-text">
+                        Flights.<br>
+                        Hotels.<br>
+                        Packages.
+                    </div>
+                </div>
+            </h1>
             <p>Explore Now <i class="fa-regular fa-arrow-right"></i> </p>
         </div>
 
@@ -262,11 +301,11 @@
                 </div>
                 <div class="inner-text">
                     <span>Departure</span>
-                    <input type="text" placeholder="15 Sept 2024">
+                    <input type="date" id="checkin" value="2024-09-11">
                 </div>
                 <div class="inner-text">
                     <span>Return</span>
-                    <input type="text" placeholder="17 Sept 2024">
+                    <input type="date" id="checkin" value="2024-09-15">
                 </div>
                 <div class="inner-text">
                     <span>Passengers</span>
