spelling error signup.html

--- a/signup.html
+++ b/signup.html
@@ -50,21 +50,21 @@
         <div class="middle">
             <div class="box">
                 <i class="fa-solid fa-coins"></i>
-                <div class="fuck">
+                <div class="benefits">
                     <h4>Sign-up & Earn</h4>
                     <p>Sign-up & get exciting Deals</p>
                 </div>
             </div>
             <div class="box">
                 <i class="fa-solid fa-gifts"></i>
-                <div class="fuck">
+                <div class="benefits">
                     <h4>Amazing Discounts</h4>
                     <p>Login And Enjoy Amazing Discounts On Travel Bookings.</p>
                 </div>
             </div>
             <div class="box">
                 <i class="fa-solid fa-plane-departure"></i>
-                <div class="fuck">
+                <div class="benefits">
                     <h4>Hassle-Free Bookings</h4>
                     <p>Sign-In And Enjoy Hassle-Free Bookings.</p>
                 </div>
