--- a/header.html
+++ b/header.html
@@ -240,80 +240,74 @@ nav img {
             </a>
         </nav>
         <div class="content">
-            <h1>Customize & Book<br>Amazing Holiday<br>
-                <div class="scroll-container">
-                    <div class="scroll-text">
-                        Flights.<br>
-                        Hotels.<br>
-                        Packages.
-                    </div>
-                </div>
-            </h1>
-            <p>Explore Now <i class="fa-regular fa-arrow-right"></i> </p>
+            <h1>Customize & Book Amazing Holiday Packages.</h1>
+            <a href="#main">Explore Now</a>
         </div>
 
-        <ul class="navbar-2">
-            <li>
-                <a href="#" id="btn1" class="icons">
-                    <i class="fa-solid fa-plane-up"></i>
-                    <p>Flights</p>
-                </a>
-            </li>
-            <hr>
-            <li>
-                <a href="#" id="btn2" class="icons">
-                    <i class="fa-solid fa-hotel"></i>
-                    <p>Hotels</p>
-                </a>
-            </li>
-            <hr>
-            <li>
-                <a href="#" id="btn3" class="icons">
-                    <i class="fa-solid fa-suitcase-rolling"></i></i>
-                    <p>Packages</p>
-                </a>
-            </li>
-            <hr>
-            <li>
-                <a href="#" id="btn4" class="icons">
-                    <i class="fa-solid fa-binoculars"></i></i>
-                    <p>Sightseeing</p>
-                </a>
-            </li>
-            <hr>
-            <li>
-                <a href="#" id="btn5" class="icons">
-                    <i class="fa-solid fa-taxi"></i></i>
-                    <p>Cabs</p>
-                </a>
-            </li>
-        </ul>
+        <div class="navbar-grid">
+            <ul class="navbar-2">
+                <li>
+                    <a href="#" id="btn1" class="icons">
+                        <i class="fa-solid fa-plane-up"></i>
+                        <p>Flights</p>
+                    </a>
+                </li>
+                <hr>
+                <li>
+                    <a href="#" id="btn2" class="icons">
+                        <i class="fa-solid fa-hotel"></i>
+                        <p>Hotels</p>
+                    </a>
+                </li>
+                <hr>
+                <li>
+                    <a href="#" id="btn3" class="icons">
+                        <i class="fa-solid fa-suitcase-rolling"></i></i>
+                        <p>Packages</p>
+                    </a>
+                </li>
+                <hr>
+                <li>
+                    <a href="#" id="btn4" class="icons">
+                        <i class="fa-solid fa-binoculars"></i></i>
+                        <p>Sightseeing</p>
+                    </a>
+                </li>
+                <hr>
+                <li>
+                    <a href="#" id="btn5" class="icons">
+                        <i class="fa-solid fa-taxi"></i></i>
+                        <p>Cabs</p>
+                    </a>
+                </li>
+            </ul>
 
-        <div class="navbar-3">
-            <div class="left-1">
-                <div class="inner-text">
-                    <span>From</span>
-                    <input type="text" placeholder="DEL-New Delhi">
+            <div class="navbar-3">
+                <div class="left-1">
+                    <div class="inner-text">
+                        <p>From</p>
+                        <input type="text" placeholder="DEL-New Delhi">
+                    </div>
+                    <div class="inner-text">
+                        <p>To</p>
+                        <input type="text" placeholder="BOM-Mumbai">
+                    </div>
+                    <div class="inner-text">
+                        <p>Departure</p>
+                        <input type="date" id="checkin" value="2024-09-11">
+                    </div>
+                    <div class="inner-text">
+                        <p>Return</p>
+                        <input type="date" id="checkin" value="2024-09-15">
+                    </div>
+                    <div class="inner-text">
+                        <p>Passengers</p>
+                        <input type="text" placeholder="2 Adults">
+                    </div>
                 </div>
-                <div class="inner-text">
-                    <span>To</span>
-                    <input type="text" placeholder="BOM-Mumbai">
+                <div class="right-1">
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
-                <div class="inner-text">
-                    <span>Departure</span>
-                    <input type="date" id="checkin" value="2024-09-11">
-                </div>
-                <div class="inner-text">
-                    <span>Return</span>
-                    <input type="date" id="checkin" value="2024-09-15">
-                </div>
-                <div class="inner-text">
-                    <span>Passengers</span>
-                    <input type="text" placeholder="2 Adults">
-                </div>
-            </div>
-            <div class="right-1">
-                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
 
