--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,6 @@
             </form>
         </div>
     </div>
-
     <div class="right">
         <h3>UNLOCK THESE BENEFITS</h3>
         <div class="middle">
@@ -52,7 +51,7 @@
                 <i class="fa-solid fa-coins"></i>
                 <div class="benefits">
                     <h4>Sign-up & Earn</h4>
-                    <p>Sign-up & get exciting Deals</p>
+                    <p>Sign-up/Register And Get Exciting Deals</p>
                 </div>
             </div>
             <div class="box">
@@ -76,7 +75,6 @@
             </div>
         </div>
     </div>
-    
 </body>
 
 </html>
